...
                android:textColor="@color/textColor"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- New Warm metric -->
        <LinearLayout
            android:id="@+id/warm_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:foreground="?attr/selectableItemBackground"
...
